correct overflow

--- a/assets/source/3.0/sass/embed.scss
+++ b/assets/source/3.0/sass/embed.scss
@@ -3,7 +3,6 @@
 	position: relative;
 	height: 0;
 	background-size: cover;
-	overflow-y:auto;
 
 	&.embed__ratio--16-9 {
 		padding-bottom: 56.25%;
